[package]
name = "jsonfuzz-rs"
version = "0.1.0"
authors = ["Matt Traudt <sirmatt@ksu.edu>"]
edition = "2018"

[lib]
name = "jsonfuzz"
crate_type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
